--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,24 @@
           "value": "strict-origin-when-cross-origin"
         }
       ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    },
+    {
+      "source": "/robots.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain"
+        }
+      ]
     }
   ],
   "rewrites": [
@@ -31,5 +49,12 @@
       "source": "/robots.txt",
       "destination": "/robots.txt"
     }
-  ]
+  ],
+  "functions": {
+    "public/sitemap.xml": {
+      "headers": {
+        "Content-Type": "application/xml"
+      }
+    }
+  }
 }
